--- a/react-frontend/src/TodoList.css
+++ b/react-frontend/src/TodoList.css
@@ -11,24 +11,20 @@
     border-radius: 2vh;
     border-top-left-radius: 0;
     box-shadow: 2vh 2vh 1vh rgba(0, 0, 0, 0.308);
-    background-color: #4B6D5B;
 
+    background-color: var(--todo-entry-bg-color);
 
     white-space: pre-line;
 }
 
 .todoEntryCompleted-container {
 
-    background-color: #365042a9;
+    background-color: var(--todo-entry-fulfilled-bg-color);
 }
 
 .todoEntry-box {
     flex: 1;
-    /* Take up equal space */
-    /* margin: 0 10px; */
-    /* Optional spacing between boxes */
     text-align: center;
-    /* padding: 3%; */
     padding: 1% 3% 1% 3%;
 
     display: flex;
@@ -47,21 +43,18 @@
     justify-content: left;
 
     user-select: none;
-    color: #e8e6d6;
+    color: #ffffff;
 
     cursor: pointer;
 }
 
 .todoEntry-desc-popup {
-    /* display: block; */
-    /* später = "none" */
     font-size: 1vw;
     flex-basis: 100%;
 
     display: flex;
 
-    /* background-color: rgb(106, 106, 236); */
-    background-color: #8e9982;
+    background-color: var(--todo-desc-bg-color);
 
     border-bottom-left-radius: 2vh;
     border-bottom-right-radius: 2vh;
@@ -83,11 +76,10 @@
     text-decoration: line-through;
     text-decoration-thickness: 0.15vw;
 
-    color: rgba(197, 196, 196, 0.671);
+    color: var(--todo-fulfilled-strikethrough-color);
 }
 
 .section-todos-header {
-    /* background-color: darkgrey; */
     width: 60%;
     display: flex;
 
@@ -105,7 +97,7 @@
 
     cursor: pointer;
 
-    background-color: rgb(34, 34, 34);
+    background-color: var(--sections-header-bg-color);
 }
 
 .section-todos-header-title {
@@ -123,18 +115,11 @@
 }
 
 .header-button-container {
-    /* background-color: antiquewhite; */
-
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 1vh;
-}
-
-#header-button {
-    padding: 1vh 2vh 1vh 2vh;
-    /* style more */
 }
 
 #all-active-todos-container,
@@ -148,6 +133,7 @@
 
     opacity: 1;
 
+    /* scuffed lol */
     max-height: 5000vh;
 
     transition: all 0.4s ease-in;
