small structural changes,changed desc bg color

--- a/react-frontend/src/global-colors.css
+++ b/react-frontend/src/global-colors.css
@@ -5,7 +5,7 @@
     /* TodoList.css */
     --todo-entry-bg-color: #4B6D5B;
     --todo-entry-fulfilled-bg-color: #365042a9;
-    --todo-desc-bg-color: #8e9982;
+    --todo-desc-bg-color: #bfe7d063;
     --sections-header-bg-color: rgb(34, 34, 34);
 
     --todo-fulfilled-strikethrough-color: rgba(197, 196, 196, 0.671);
