--- a/react-frontend/src/TodoDeleteButton.css
+++ b/react-frontend/src/TodoDeleteButton.css
@@ -1,9 +1,12 @@
 .todoEntry-desc-delete {
     flex: 1;
+
+    width: 100%;
 }
 
 .todoEntry-desc-delete-button {
     cursor: pointer;
+    width: 50%;
 
     padding: 5%;
     padding-left: 15%;
@@ -11,8 +14,6 @@
 
     border-radius: 5vh;
     border: none;
-
-    font-size: 1.5vh;
 }
 
 .todoEntry-desc-delete-button:hover::after {
