--- a/react-frontend/src/TodoCustomCheckmark.css
+++ b/react-frontend/src/TodoCustomCheckmark.css
@@ -8,10 +8,36 @@
     padding: 5vh;
 }
 
+
+@keyframes shake {
+    0% {
+        transform: scale(100%);
+        transform: rotateX(180deg);
+    }
+
+    25% {
+        transform: scale(200%);
+    }
+
+    50% {}
+
+    75% {
+        transform: scale(100%);
+    }
+
+    100% {
+        transform: scale(0%);
+    }
+}
+
+.shake {
+    animation: shake 0.5s ease-in-out;
+}
+
 .checkmark-button {
     position: absolute;
     opacity: 1;
-    transition: opacity 1s ease;
+    transition: opacity 0.5s ease;
     pointer-events: none;
 
     /* height: 7vh; */
