added popoutindicator on headers, changed little design stuff

--- a/react-frontend/src/TodoAddButton.css
+++ b/react-frontend/src/TodoAddButton.css
@@ -3,8 +3,8 @@
     color: white;
 
     width: 20%;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    padding-top: 1.5%;
+    padding-bottom: 1.5%;
 
     margin-top: 1vh;
     margin-bottom: 1vh;
@@ -15,7 +15,8 @@
     border-radius: 2vh;
 
     /* font-size: 1.5vh; */
-    font-size: clamp(10px, 1vw, 50px);
+    font-size: clamp(10px, 0.7vw, 50px);
+    font-weight: bold;
 
     transition-duration: 0.2s;
 
