--- a/react-frontend/src/TodoList.css
+++ b/react-frontend/src/TodoList.css
@@ -41,8 +41,8 @@
 
     position: relative;
 
-    padding-top: 2%;
-    padding-bottom: 2%;
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
 
 .todo-title {
@@ -78,9 +78,10 @@
     flex: 2;
     display: inline-block;
     text-align: left;
-    padding: 5vh;
+    padding: 3vh;
 
-    color: black;
+    color: white;
+    font-weight: bold;
 }
 
 
@@ -106,7 +107,6 @@
     border-top-left-radius: 2vh;
     border-bottom-right-radius: 2vh;
 
-
     cursor: pointer;
 
     /* background-color: var(--sections-header-bg-color); */
@@ -118,12 +118,12 @@
     color: white;
     text-align: left;
 
-    padding-left: 5vh;
+    padding-left: 1.5vh;
 
     margin-top: 2vh;
     margin-bottom: 2vh;
 
-    font-size: 1.5vh;
+    font-size: 0.7vw;
 
 }
 
@@ -144,4 +144,21 @@
 #delete-fulfilled-todos-button.visible,
 #toggle-collapse-desc-button.visible {
     opacity: 1;
+}
+
+#section-todos-header-icon-actives,
+#section-todos-header-icon-completed {
+    margin-left: 4vh;
+
+    color: rgba(255, 255, 255, 0.411);
+    font-size: 2.5vh;
+    font-weight: bolder;
+
+    pointer-events: none;
+    transition: all 0.3s ease-in;
+}
+
+#section-todos-header-icon-actives.active,
+#section-todos-header-icon-completed.active {
+    transform: rotate(90deg);
 }
