--- a/react-frontend/src/global-colors.css
+++ b/react-frontend/src/global-colors.css
@@ -5,13 +5,15 @@
     /* TodoList.css */
     --todo-entry-bg-color: #4B6D5B;
     /* --todo-entry-bg: linear-gradient(90deg, rgb(67, 122, 93) 25%, rgb(43, 97, 78) 100%); */
-    --todo-entry-bg: linear-gradient(10deg, rgba(142, 153, 130, 1) 0%, rgb(72, 151, 82) 30%, rgba(255, 255, 255, 0.342) 100%);
+    /* --todo-entry-bg: linear-gradient(10deg, rgba(142, 153, 130, 1) 0%, rgb(72, 151, 82) 30%, rgba(255, 255, 255, 0.342) 100%); */
+    --todo-entry-bg: linear-gradient(40deg, rgba(32, 151, 58, 0.288) 10%, rgba(96, 209, 120, 0.274) 100%);
+
 
     --todo-entry-fulfilled-bg-color: #364f41;
     --todo-entry-fulfilled-bg: linear-gradient(90deg, rgba(36, 70, 52, 0.912) 10%, rgb(38, 78, 56) 55%, rgba(39, 68, 52, 0.534) 100%);
 
 
-    --todo-desc-bg-color: #b4ca9c98;
+    --todo-desc-bg-color: #9696965e;
 
 
     --sections-header-bg-color: #222222;
