--- a/react-frontend/src/TodoList.css
+++ b/react-frontend/src/TodoList.css
@@ -1,49 +1,10 @@
-.todoEntry-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: auto;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    width: 50%;
-    color: white;
-
-    border-radius: 2vh;
-    border-top-left-radius: 0;
-
-    border-bottom-style: inset;
-    border-left-style: inset;
-
-    border-left-color: #ffffffe5;
-    border-bottom-color: rgba(112, 185, 112, 0.897);
-
-    box-shadow: 2vh 2vh 1vh rgba(0, 0, 0, 0.308);
-
-    /* background-color: var(--todo-entry-bg-color); */
-
-    background: var(--todo-entry-bg);
-    white-space: pre-line;
-}
-
 .todoEntryCompleted-container {
 
     /* background-color: var(--todo-entry-fulfilled-bg-color); */
     background: var(--todo-entry-fulfilled-bg);
 }
 
-.todoEntry-box {
-    flex: 1;
-    text-align: center;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    position: relative;
-
-    padding-top: 1%;
-    padding-bottom: 1%;
-}
 
 .todo-title {
     flex: 2;
@@ -57,31 +18,6 @@
     color: #ffffff;
 
     cursor: pointer;
-}
-
-.todoEntry-desc-popup {
-    font-size: 1vw;
-    flex-basis: 100%;
-
-    width: 100%;
-    display: flex;
-
-    background-color: var(--todo-desc-bg-color);
-
-    border-bottom-left-radius: 2vh;
-    border-bottom-right-radius: 2vh;
-
-    align-items: center;
-}
-
-.todoEntry-desc-text {
-    flex: 2;
-    display: inline-block;
-    text-align: left;
-    padding: 3vh;
-
-    color: white;
-    font-weight: bold;
 }
 
 
@@ -138,11 +74,14 @@
 #delete-fulfilled-todos-button,
 #toggle-collapse-desc-button {
     opacity: 0;
-    transition: all 0.3s ease-out;
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: all 0.2s ease-in;
 }
 
 #delete-fulfilled-todos-button.visible,
 #toggle-collapse-desc-button.visible {
+    transform: scaleY(1);
     opacity: 1;
 }
 
@@ -155,7 +94,7 @@
     font-weight: bolder;
 
     pointer-events: none;
-    transition: all 0.3s ease-in;
+    transition: all 0.2s ease-in;
 }
 
 #section-todos-header-icon-actives.active,
