--- a/react-frontend/src/TodoCollapseAllButton.css
+++ b/react-frontend/src/TodoCollapseAllButton.css
@@ -30,4 +30,13 @@
 .collapse-container {
     width: 100%;
 
+    opacity: 0;
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: all 0.2s ease-in;
+}
+
+.collapse-container.visible {
+    transform: scaleY(1);
+    opacity: 1;
 }
