--- a/react-frontend/src/TodoListDisplay.css
+++ b/react-frontend/src/TodoListDisplay.css
@@ -3,11 +3,11 @@
     display: block;
     overflow: hidden;
 
-    transform-origin: top;
-
     opacity: 0;
     max-height: 0;
+
     transform: scaleY(0);
+    transform-origin: top;
 
     transition: all 0.3s linear;
 }
@@ -17,11 +17,10 @@
 
     opacity: 1;
 
-    /* scuffed lol */
-    max-height: 5000vh;
-    transform: scaleY(1);
+    /* max-height: 1000vh; */
+    max-height: 500vh;
 
-    transition: all 0.4s ease-in;
+    transform: scaleY(1);
 }
 
 .todoEntry-container {
@@ -50,7 +49,7 @@
     background: var(--todo-entry-bg);
     white-space: pre-line;
 
-    transition: all 0.5s linear;
+    transition: all 0.3s linear;
 
 }
 
@@ -102,7 +101,7 @@
     transform-origin: top;
 
     opacity: 1;
-    max-height: 5000vh;
+    max-height: 500vh;
 }
 
 .todoEntry-desc-text {
