--- a/react-frontend/src/TodoCustomCheckmark.css
+++ b/react-frontend/src/TodoCustomCheckmark.css
@@ -1,8 +1,11 @@
 .custom-checkmark-container {
     position: relative;
     display: flex;
+
     justify-content: center;
     align-items: center;
+
+
     width: 100%;
 
     padding: 5vh;
@@ -11,8 +14,7 @@
 
 @keyframes shake {
     0% {
-        transform: scale(75%);
-        transform: rotateX(180deg);
+        transform: scale(50%), perspective(50%);
     }
 
     50% {
@@ -31,6 +33,7 @@
 
 .shake {
     animation: shake 0.5s ease-in-out;
+    pointer-events: none;
 }
 
 .checkmark-button {
@@ -39,8 +42,8 @@
     transition: opacity 0.5s ease;
     pointer-events: none;
 
-    /* height: 7vh; */
-    height: 80%;
+    /* height: 5vh; */
+    height: calc(5% + 5vh);
 
     cursor: pointer;
     border: none;
