--- a/react-frontend/src/TodoAddButton.css
+++ b/react-frontend/src/TodoAddButton.css
@@ -21,51 +21,25 @@
     transition-duration: 0.2s;
 }
 
-.addTodoForm-container {
-    margin-top: 5vh;
-    margin-bottom: 5vh;
-}
-
-#that-addTodoForm-popup-container {
-    display: block;
-    opacity: 1;
-    overflow: hidden;
-
-    transform-origin: top;
-
-    /* Standardwerte */
-}
-
-#that-addTodoForm-popup-container.visible {
-    opacity: 1;
-    max-height: 50vh;
-
-    transform: scaleY(1);
-    transition: all 0.2s ease-in;
-}
-
-#that-addTodoForm-popup-container.hidden {
-    opacity: 0;
-    max-height: 0;
-    transform: scaleY(0);
-    transition: all 0.2s linear;
-}
-
 .openPopup-button:hover {
     /* background-color: rgba(141, 252, 165, 0.795); */
     box-shadow: 10px 5px 20px 5px var(--button-shadow-color);
 }
 
-.addTodoForm {
-    display: block;
-}
 
+
+.addTodoForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
 
 .addTodoForm input[type="text"],
 .addTodoForm-desc {
-    width: 15%;
-    height: 6vh;
-    margin-top: 0.5vh;
+    width: 60%;
+    height: 7vh;
+    margin-top: 2vh;
     padding-left: 2vh;
     padding-right: 2vh;
 
@@ -86,19 +60,18 @@
 }
 
 .addTodoForm-submitButton {
-    width: 10%;
+    width: 30%;
     padding-top: 1vh;
     padding-bottom: 1vh;
 
-    margin-top: 2vh;
-    margin-bottom: 3vh;
+    margin-top: 4vh;
+    margin-bottom: 2vh;
 
     border: none;
     cursor: pointer;
     border-radius: 2vh;
 
     transition-duration: 0.3s;
-
 }
 
 .addTodoForm-submitButton:hover {
@@ -106,4 +79,65 @@
     background-color: var(--button-hover-success-color);
 
     box-shadow: 15px 10px 20px 5px var(--button-shadow-color);
+}
+
+#add-todo-modal:modal {
+    width: 30%;
+    height: 40%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    background: #222222;
+
+    border-radius: 5%;
+    border-style: outset;
+    border-color: #8b8b8b79;
+}
+
+#add-todo-modal::backdrop {
+    background: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(5px);
+}
+
+.add-todo-modal-title-container {
+    display: flex;
+
+    align-items: center;
+
+    width: 100%;
+    height: auto;
+
+    align-self: flex-start;
+}
+
+.add-todo-modal-title {
+    flex: 6;
+    /* padding: 1%; */
+    font-weight: bolder;
+    font-size: 22px;
+
+    text-align: left;
+    color: white;
+
+    padding-left: 10%;
+}
+
+.add-todo-modal-close-button-container {
+    flex: 1;
+    align-items: center;
+    cursor: pointer;
+    color: white;
+}
+
+
+.todo-modal-content-container {
+    height: 80%;
+    width: 100%;
+    position: relative;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
