--- a/react-frontend/src/TodoListDisplay.css
+++ b/react-frontend/src/TodoListDisplay.css
@@ -20,8 +20,8 @@
 
     opacity: 1;
 
-    /* max-height: 1000vh; */
-    max-height: 60vh;
+    max-height: 1000vh;
+    /* max-height: 60vh; */
 
     transform: scaleY(1);
     overflow-y: scroll;
@@ -34,7 +34,7 @@
     margin: auto;
     margin-top: 2%;
     margin-bottom: 2%;
-    width: 75%;
+    width: 90%;
     color: white;
 
     border-radius: 2vh;
@@ -61,15 +61,30 @@
     flex: 1;
 
     display: flex;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;
 
-    position: relative;
 
     height: 6vh;
     padding-top: 1vh;
     padding-bottom: 1vh;
 
-    padding-left: 3vw;
+}
+
+.todoEntry-box-placeholder-container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin: 4%;
+    height: 100%;
+    background-color: darkgrey;
+}
+
+.todoEntry-box-placeholder-container.checkbox {
+    margin: 12%;
 }
 
 .todo-title {
@@ -77,7 +92,7 @@
 
     font-size: calc(60% + 1vh);
 
-    padding-left: 7%;
+    padding-left: 5%;
     font-weight: bolder;
     position: relative;
     justify-content: left;
@@ -113,11 +128,9 @@
 
     transform: scaleY(0);
     transform-origin: top;
-    /* background-color: red; */
 }
 
 .todoEntry-desc-popup.visible {
-    /* background-color: green; */
     transform: scaleY(1);
     transform-origin: top;
 
