--- a/react-frontend/src/TodoEditButton.css
+++ b/react-frontend/src/TodoEditButton.css
@@ -14,3 +14,24 @@
 
     transition: all 0.2s ease-in-out;
 }
+
+.todo-entry-edit-modal:modal {
+    width: 30%;
+    height: 40%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    background: #222222;
+
+    border-radius: 5%;
+    border-style: outset;
+    border-color: #8b8b8b79;
+
+}
+
+.todo-entry-edit-modal::backdrop {
+    background: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(5px);
+}
