--- a/react-frontend/src/TodoListDisplay.css
+++ b/react-frontend/src/TodoListDisplay.css
@@ -38,6 +38,7 @@
     width: 90%;
     color: white;
 
+
     border-radius: 2vh;
     border-top-left-radius: 0;
 
@@ -45,17 +46,15 @@
     border-left-style: inset;
 
     border-left-color: #ffffffe5;
-    border-bottom-color: rgba(112, 185, 112, 0.897);
+    border-bottom-color: rgba(19, 126, 19, 0.699);
 
     box-shadow: 2vh 2vh 1vh rgba(0, 0, 0, 0.308);
-
-    /* background-color: var(--todo-entry-bg-color); */
 
     background: var(--todo-entry-bg);
     white-space: pre-line;
 
-    transition: all 0.3s linear;
-
+    overflow: hidden;
+    transition: all 0.3s ease;
 }
 
 .todoEntry-box {
@@ -66,10 +65,7 @@
     align-items: center;
     justify-content: center;
 
-
-    min-height: 8vh;
-    padding-top: 1vh;
-    padding-bottom: 1vh;
+    min-height: 10vh;
 }
 
 .todoEntry-box-placeholder-container {
@@ -83,7 +79,7 @@
 
 .todoEntry-box-placeholder-container.checkbox {
     margin-left: 10%;
-    margin-right: 20%;
+    margin-right: 10%;
 }
 
 .todo-title {
@@ -107,47 +103,46 @@
 
 .todoEntry-desc-popup {
     font-size: calc(50% + 1vh);
-
     flex-basis: 100%;
-
     width: 100%;
-    /* display: flex; */
 
-    background-color: var(--todo-desc-bg-color);
 
-    border-bottom-left-radius: 2vh;
-    border-bottom-right-radius: 2vh;
+    max-height: 0;
+    opacity: 0;
+    overflow: hidden;
+    transform: translateY(-10%);
+    transform: scaleY(0);
+    transition: all 0.5s ease;
+    transform-origin: top;
 
-    /* align-items: center; */
-
-    transition: all 0.1s linear;
+    background-color: rgba(255, 255, 255, 0.11);
 }
 
 .todoEntry-desc-popup.hidden {
     opacity: 0;
     max-height: 0;
-
     transform: scaleY(0);
-    transform-origin: top;
+    transform: translateY(0);
 }
 
 .todoEntry-desc-popup.visible {
-    transform: scaleY(1);
-    transform-origin: top;
     opacity: 1;
-    max-height: 500vh;
+    transform: scaleY(1);
+    transform: translateY(0);
+
+    max-height: 500px;
 }
 
 .todoEntry-desc-text {
     display: inline-block;
     text-align: left;
-    padding: 3vh;
-
     word-wrap: break-word;
     overflow-y: auto;
 
-    width: 100%;
+    width: 90%;
+    min-height: 7vh;
 
     color: white;
-    font-weight: bold;
+    font-weight: normal;
+
 }
