--- a/react-frontend/src/output.css
+++ b/react-frontend/src/output.css
@@ -184,12 +184,6 @@
   .pointer-events-auto {
     pointer-events: auto;
   }
-  .invisible {
-    visibility: hidden;
-  }
-  .visible {
-    visibility: visible;
-  }
   .absolute {
     position: absolute;
   }
@@ -223,11 +217,11 @@
   .flex {
     display: flex;
   }
-  .hidden {
-    display: none;
-  }
   .h-3\/4 {
     height: calc(3/4 * 100%);
+  }
+  .h-8 {
+    height: calc(var(--spacing) * 8);
   }
   .h-10 {
     height: calc(var(--spacing) * 10);
@@ -265,6 +259,9 @@
   .w-6\/10 {
     width: calc(6/10 * 100%);
   }
+  .w-8 {
+    width: calc(var(--spacing) * 8);
+  }
   .w-9\/10 {
     width: calc(9/10 * 100%);
   }
@@ -295,9 +292,6 @@
   .flex-10 {
     flex: 10;
   }
-  .origin-left {
-    transform-origin: left;
-  }
   .origin-top {
     transform-origin: top;
   }
@@ -305,12 +299,6 @@
     --tw-scale-x: 50%;
     --tw-scale-y: 50%;
     --tw-scale-z: 50%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .scale-75 {
-    --tw-scale-x: 75%;
-    --tw-scale-y: 75%;
-    --tw-scale-z: 75%;
     scale: var(--tw-scale-x) var(--tw-scale-y);
   }
   .scale-85 {
@@ -325,24 +313,6 @@
     --tw-scale-z: 100%;
     scale: var(--tw-scale-x) var(--tw-scale-y);
   }
-  .scale-105 {
-    --tw-scale-x: 105%;
-    --tw-scale-y: 105%;
-    --tw-scale-z: 105%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .scale-120 {
-    --tw-scale-x: 120%;
-    --tw-scale-y: 120%;
-    --tw-scale-z: 120%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .scale-150 {
-    --tw-scale-x: 150%;
-    --tw-scale-y: 150%;
-    --tw-scale-z: 150%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
   .scale-y-0 {
     --tw-scale-y: 0%;
     scale: var(--tw-scale-x) var(--tw-scale-y);
@@ -351,17 +321,8 @@
     --tw-scale-y: 100%;
     scale: var(--tw-scale-x) var(--tw-scale-y);
   }
-  .rotate-6 {
-    rotate: 6deg;
-  }
-  .rotate-12 {
-    rotate: 12deg;
-  }
   .rotate-20 {
     rotate: 20deg;
-  }
-  .rotate-40 {
-    rotate: 40deg;
   }
   .rotate-90 {
     rotate: 90deg;
@@ -535,10 +496,6 @@
     --tw-duration: 200ms;
     transition-duration: 200ms;
   }
-  .duration-300 {
-    --tw-duration: 300ms;
-    transition-duration: 300ms;
-  }
   .duration-400 {
     --tw-duration: 400ms;
     transition-duration: 400ms;
@@ -546,10 +503,6 @@
   .duration-500 {
     --tw-duration: 500ms;
     transition-duration: 500ms;
-  }
-  .duration-1000 {
-    --tw-duration: 1000ms;
-    transition-duration: 1000ms;
   }
   .ease-in {
     --tw-ease: var(--ease-in);
@@ -562,16 +515,6 @@
   .select-none {
     -webkit-user-select: none;
     user-select: none;
-  }
-  .\*\:rotate-20 {
-    :is(& > *) {
-      rotate: 20deg;
-    }
-  }
-  .\*\:rotate-40 {
-    :is(& > *) {
-      rotate: 40deg;
-    }
   }
   .hover\:scale-95 {
     &:hover {
